--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
       color: #00ffea;
       margin: 0;
     }
-    nav {
-      background-color: #333;
-      padding: 10px;
-      text-align: center;
-      display: flex;
-      flex-warp: warp;
-      justify-content: centro;
-      gap: 10px
-    }
+  nav {
+  background-color: #333;
+  padding: 10px;
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+}
     nav button {
       background-color: transparent;
       color: white;
