--- a/index.html
+++ b/index.html
@@ -89,14 +89,12 @@
       justify-content: space-between;
       align-items: center;
     }
-    .product img {
-      width: 400px;
-      height: 200px;
-      object-fit: contain;
-      background-color: #0f0f0f;
-      border-radius: 8px;
-      display: block;
-    }
+.product img {
+  width: 100%;
+  max-width: 400px;
+  height: auto;
+  object-fit: contain;
+}
     .product h3 {
       color: #00ffea;
       margin-top: 10px;
@@ -110,7 +108,7 @@
       bottom: 0;
       width: 100%;
     }
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 700px) {
   nav {
     flex-direction: column;
   }
