--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
@@ -21,15 +22,17 @@
       color: #00ffea;
       margin: 0;
     }
-  nav {
-  background-color: #333;
-  padding: 10px;
-  text-align: center;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 10px;
-}
+
+    nav {
+      background-color: #333;
+      padding: 10px;
+      text-align: center;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
+    }
+
     nav button {
       background-color: transparent;
       color: white;
@@ -38,25 +41,30 @@
       font-size: 16px;
       cursor: pointer;
       font-weight: bold;
-      flex: 1 1 auto;
       min-width: 100px;
     }
+
     nav button:hover {
       color: #00ffea;
     }
+
     .container {
       padding: 20px;
     }
+
     .section {
       display: none;
     }
+
     .active {
       display: block;
     }
+
     .categorias-menu {
       text-align: center;
       margin-bottom: 20px;
     }
+
     .categorias-menu button {
       background-color: #1f1f1f;
       color: #00ffea;
@@ -67,18 +75,21 @@
       cursor: pointer;
       transition: background-color 0.3s ease;
     }
+
     .categorias-menu button:hover {
       background-color: #00ffea;
       color: #0f0f0f;
     }
+
     .productos-grid {
       display: grid;
-      grid-template-columns: repeat(3, 1fr));
+      grid-template-columns: repeat(3, 1fr);
       gap: 20px;
       justify-content: center;
       max-width: 1200px;
       margin: 0 auto;
     }
+
     .product {
       background-color: #1f1f1f;
       border: 1px solid #333;
@@ -89,16 +100,22 @@
       justify-content: space-between;
       align-items: center;
     }
-.product img {
-  width: 100%;
-  max-width: 400px;
-  height: auto;
-  object-fit: contain;
-}
+
+    .product img {
+      width: 100%;
+      max-width: 400px;
+      height: auto;
+      object-fit: contain;
+      background-color: #0f0f0f;
+      border-radius: 8px;
+      display: block;
+    }
+
     .product h3 {
       color: #00ffea;
       margin-top: 10px;
     }
+
     footer {
       background-color: #1f1f1f;
       text-align: center;
@@ -108,17 +125,27 @@
       bottom: 0;
       width: 100%;
     }
-@media screen and (max-width: 1200px) {
-  .productos-grid {
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
 
-@media screen and (max-width: 500px) {
-  .productos-grid {
-    grid-template-columns: 1fr;
-  }
-}
+    @media screen and (max-width: 900px) {
+      .productos-grid {
+        grid-template-columns: repeat(2, 1fr);
+      }
+    }
+
+    @media screen and (max-width: 600px) {
+      nav {
+        flex-direction: column;
+      }
+
+      nav button {
+        width: 100%;
+        margin: 5px 0;
+      }
+
+      .productos-grid {
+        grid-template-columns: 1fr;
+      }
+    }
   </style>
 </head>
 
