--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>MatiaLR Hardware</h1>
     <p>Venta de PC, componentes y servicios de hardware</p>
   </header>
-
+<div class="menu-toggle" onclick="toggleMenu()">☰</div>
   <nav>
     <button onclick="showSection('inicio')">Inicio</button>
     <button onclick="showSection('productos')">Productos</button>
