--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p>Venta de PC, componentes y servicios de hardware</p>
   </header>
 <div class="menu-toggle" onclick="toggleMenu()">☰</div>
-  <nav>
+ <nav id="main-menu">
     <button onclick="showSection('inicio')">Inicio</button>
     <button onclick="showSection('productos')">Productos</button>
     <button onclick="showSection('servicios')">Servicios</button>
