--- a/index.html
+++ b/index.html
@@ -59,6 +59,172 @@
     &copy; 2025 MatiaLR Hardware - Todos los derechos reservados
   </footer>
 
-  <script src="scripts.js"></script>
+  <script>
+    function showSection(sectionId) {
+      document.querySelectorAll('.section').forEach(section => {
+        section.classList.remove('active');
+      });
+      document.getElementById(sectionId).classList.add('active');
+
+      const menu = document.getElementById('main-menu');
+      if (window.innerWidth <= 600 && menu.classList.contains('active')) {
+        menu.classList.remove('active');
+      }
+    }
+
+    function toggleMenu() {
+      document.getElementById('main-menu').classList.toggle('active');
+    }
+
+    const SHEET_CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQBtgCrW6xTwr7XsPuTzW4cVi7G4QWFDK6BnwiZ-fsszgtfyNbdP1Uvr2ZyA3R5dvvO8E4zwKdpaGYF/pub?gid=0&single=true&output=csv';
+
+    function semanasDesde(fecha) {
+      const ahora = new Date();
+      const inicio = new Date(fecha);
+      const msPorSemana = 1000 * 60 * 60 * 24 * 7;
+      return Math.floor((ahora - inicio) / msPorSemana);
+    }
+
+    function cargarDesdeSheet() {
+      fetch(SHEET_CSV_URL)
+        .then(res => res.text())
+        .then(csv => {
+          const contenedor = document.getElementById('contenedor-productos');
+          const menu = document.getElementById('menu-categorias');
+          contenedor.innerHTML = '';
+          menu.innerHTML = '';
+
+          const filas = csv.trim().split('\n').slice(1);
+          const categoriasMap = new Map();
+
+          filas.forEach(linea => {
+            const columnas = linea.match(/(".*?"|[^",\s]+)(?=\s*,|\s*$)/g);
+            if (!columnas || columnas.length < 9) return;
+
+            const [id, nombre, descripcion, imagen, base, desde, aumento, categoria, visible] =
+              columnas.map(c => c.replace(/^"+|"+$/g, '').trim());
+
+            if (visible.trim().toLowerCase() !== 'sí') return;
+
+            const catKey = categoria.normalize('NFD').replace(/[\u0300-\u036f]/g, '').replace(/\s+/g, '').trim().toLowerCase();
+            if (!categoriasMap.has(catKey)) categoriasMap.set(catKey, categoria.trim());
+
+            const semanas = semanasDesde(desde);
+            const precio = Math.round(parseFloat(base) * Math.pow(1 + parseFloat(aumento), semanas));
+
+            const productoHTML = `
+              <div class="product ${catKey}">
+                <h3>${nombre}</h3>
+                <img src="${imagen}" alt="${nombre}" loading="lazy">
+                <p>${descripcion}</p>
+                <p><strong>Precio: $${precio.toLocaleString('es-AR')}</strong></p>
+                <a href="https://wa.me/549XXXXXXXXXX?text=Hola!%20Quiero%20comprar%20${encodeURIComponent(nombre)}%20por%20$${precio.toLocaleString('es-AR')}">
+                  <button>Comprar</button>
+                </a>
+              </div>
+            `;
+
+            contenedor.insertAdjacentHTML('beforeend', productoHTML);
+          });
+
+          menu.insertAdjacentHTML('beforeend', `<button onclick="filtrarCategoria('todos')">Todos</button>`);
+          categoriasMap.forEach((nombreOriginal, clave) => {
+            menu.insertAdjacentHTML('beforeend', `<button onclick="filtrarCategoria('${clave}')">${nombreOriginal}</button>`);
+          });
+
+          const ahora = new Date();
+          const hora = ahora.toLocaleTimeString('es-AR', { hour: '2-digit', minute: '2-digit', second: '2-digit' });
+          document.getElementById('ultima-actualizacion').innerText = `⏱ Última actualización: ${hora}`;
+        })
+        .catch(error => console.error('Error cargando productos:', error));
+    }
+
+    function filtrarCategoria(categoria) {
+      document.querySelectorAll('.product').forEach(producto => {
+        producto.style.display = categoria === 'todos' || producto.classList.contains(categoria) ? 'flex' : 'none';
+      });
+    }
+
+    cargarDesdeSheet();
+    setInterval(cargarDesdeSheet, 60000);
+  </script>
+
+  <style>
+    .menu-toggle {
+      display: none;
+    }
+
+    .productos-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      gap: 15px;
+      padding: 10px;
+    }
+
+    .product {
+      border: 1px solid #ccc;
+      padding: 10px;
+      border-radius: 10px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      background: #fff;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      transition: transform 0.2s;
+    }
+
+    .product:hover {
+      transform: scale(1.02);
+    }
+
+    .product img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+    }
+
+    .product button {
+      background-color: #28a745;
+      color: white;
+      border: none;
+      padding: 8px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .product button:hover {
+      background-color: #218838;
+    }
+
+    @media screen and (max-width: 600px) {
+      nav {
+        flex-direction: column;
+      }
+      nav button {
+        width: 100%;
+        margin: 5px 0;
+      }
+      .productos-grid {
+        grid-template-columns: 1fr;
+      }
+      .menu-toggle {
+        display: block;
+      }
+      #main-menu {
+        display: none;
+        flex-direction: column;
+        background-color: #333;
+        transition: all 0.3s ease;
+      }
+      #main-menu.active {
+        display: flex;
+      }
+      #main-menu button {
+        width: 100%;
+        margin: 0;
+        border-top: 1px solid #444;
+      }
+    }
+  </style>
 </body>
 </html>
