--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
   <header>
-    <h1>MatiaLR Hardware</h1>
-    <p>Venta de PC, componentes y servicios de hardware</p>
+<div class="portada">
+  <img src="img/portada.jpg" alt="Banner MatiaLR Hardware">
+</div>
   </header>
 
   <div class="menu-toggle" onclick="toggleMenu()">☰</div>
