--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
 <div class="portada">
-  <img src="img/portada.jpg" alt="Banner MatiaLR Hardware">
+  <img src="img/LOGO/portada.png" alt="Banner MatiaLR Hardware">
 </div>
   </header>
 
