--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <section id="productos" class="section">
       <h2>Productos</h2>
       <div class="categorias-menu" id="menu-categorias"></div>
+      <div class="subcategorias-menu" id="menu-subcategorias"></div>
       <p id="ultima-actualizacion" style="text-align:center; color:#888;"></p>
       <div class="productos-grid" id="contenedor-productos"></div>
     </section>
