--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     <section id="productos" class="section">
       <h2>Productos</h2>
       <div class="categorias-menu" id="menu-categorias"></div>
-      <div class="subcategorias-menu" id="menu-subcategorias"></div>
+     <select id="menu-subcategorias" class="subcategorias-select" onchange="filtrarSubgrupo(this.value)">
+  <option value="todos">Subcategorías</option>
+</select>
       <p id="ultima-actualizacion" class="ultima-actualizacion"></p>
       <div class="productos-grid" id="contenedor-productos"></div>
     </section>
