--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
     <section id="productos" class="section">
       <h2>Productos</h2>
       <div class="categorias-menu" id="menu-categorias"></div>
-     <select id="menu-subcategorias" class="subcategorias-select" onchange="filtrarSubgrupo(this.value)">
-  <option value="todos">Subcategorías</option>
+    <select id="menu-subcategorias" onchange="filtrarSubgrupo(this.value)" class="subcategorias-select">
+  <option value="todos">Mostrar todos</option>
 </select>
+<div id="contenedor-productos"></div>
+<p id="ultima-actualizacion" style="font-size: 0.9em; color: #666;">
       <p id="ultima-actualizacion" class="ultima-actualizacion"></p>
       <div class="productos-grid" id="contenedor-productos"></div>
     </section>
