--- a/index.html
+++ b/index.html
@@ -20,12 +20,22 @@
       <img src="img/LOGO/portada.png" alt="Banner MatiaLR Hardware">
     </div>
   </header>
-
+<iframe
+  src="https://www.youtube.com/embed/ID_DEL_VIDEO?autoplay=1&mute=1&loop=1&playlist=ID_DEL_VIDEO&controls=0&rel=0&showinfo=0"
+  frameborder="0"
+  allow="autoplay; encrypted-media"
+  allowfullscreen
+></iframe>
   <div class="container">
     <section id="inicio" class="section active">
       <center>
         <h2>Bienvenido</h2>
         <p>Somos tu tienda de confianza en hardware, PC gamers y periféricos.</p>
+<div class="video-slider" id="video-slider">
+  <iframe src="https://www.youtube.com/embed/dpE87nUVesA?start=141&end=151&autoplay=1&mute=1&controls=0&showinfo=0&rel=0" allow="autoplay" frameborder="0"></iframe>
+  <iframe src="https://www.youtube.com/embed/ykYyQ7ruyT0?start=215&end=225&autoplay=0&mute=1&controls=0&showinfo=0&rel=0" allow="autoplay" frameborder="0" style="display:none;"></iframe>
+  <iframe src="https://www.youtube.com/embed/FfLJNnBVufE?start=50&end=60&autoplay=0&mute=1&controls=0&showinfo=0&rel=0" allow="autoplay" frameborder="0" style="display:none;"></iframe>
+</div>
       </center>
     </section>
 
