--- a/index.html
+++ b/index.html
@@ -28,14 +28,16 @@
 ></iframe>
   <div class="container">
     <section id="inicio" class="section active">
+      <div class="video-trio">
+  <iframe src="https://www.youtube.com/embed/dpE87nUVesA?start=141&end=151&autoplay=1&mute=1&controls=0&showinfo=0&rel=0&loop=1&playlist=dpE87nUVesA" allow="autoplay" frameborder="0"></iframe>
+  
+  <iframe src="https://www.youtube.com/embed/ykYyQ7ruyT0?start=215&end=225&autoplay=1&mute=1&controls=0&showinfo=0&rel=0&loop=1&playlist=ykYyQ7ruyT0" allow="autoplay" frameborder="0"></iframe>
+  
+  <iframe src="https://www.youtube.com/embed/FfLJNnBVufE?start=50&end=60&autoplay=1&mute=1&controls=0&showinfo=0&rel=0&loop=1&playlist=FfLJNnBVufE" allow="autoplay" frameborder="0"></iframe>
+</div>
       <center>
         <h2>Bienvenido</h2>
         <p>Somos tu tienda de confianza en hardware, PC gamers y periféricos.</p>
-<div class="video-slider" id="video-slider">
-  <iframe src="https://www.youtube.com/embed/dpE87nUVesA?start=141&end=151&autoplay=1&mute=1&controls=0&showinfo=0&rel=0" allow="autoplay" frameborder="0"></iframe>
-  <iframe src="https://www.youtube.com/embed/ykYyQ7ruyT0?start=215&end=225&autoplay=0&mute=1&controls=0&showinfo=0&rel=0" allow="autoplay" frameborder="0" style="display:none;"></iframe>
-  <iframe src="https://www.youtube.com/embed/FfLJNnBVufE?start=50&end=60&autoplay=0&mute=1&controls=0&showinfo=0&rel=0" allow="autoplay" frameborder="0" style="display:none;"></iframe>
-</div>
       </center>
     </section>
 
