--- a/index.html
+++ b/index.html
@@ -6,71 +6,91 @@
   <title>MLR Hardware</title>
   <link rel="icon" href="img/LOGO/logo.png" type="image/png" />
   <link rel="stylesheet" href="estilos.css" />
+  <style>
+    .zoom-wrapper {
+      transform: scale(0.8);
+      transform-origin: top center;
+      width: 125%;
+    }
+
+    .portada img {
+      width: 100%;
+      max-width: 800px;
+      height: auto;
+      display: block;
+      margin: 0 auto;
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <div class="menu-toggle" onclick="toggleMenu()">☰</div>
-    <nav id="main-menu">
-      <button onclick="showSection('inicio')">Inicio</button>
-      <button onclick="showSection('productos')">Productos</button>
-      <button onclick="showSection('servicios')">Servicios</button>
-      <button onclick="showSection('contacto')">Contacto</button>
-    </nav>
-    <div class="portada">
-      <img src="img/LOGO/portada.png" alt="Banner MatiaLR Hardware">
+  <div class="zoom-wrapper">
+    <header>
+      <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+      <nav id="main-menu">
+        <button onclick="showSection('inicio')">Inicio</button>
+        <button onclick="showSection('productos')">Productos</button>
+        <button onclick="showSection('servicios')">Servicios</button>
+        <button onclick="showSection('contacto')">Contacto</button>
+      </nav>
+      <div class="portada">
+        <img src="img/LOGO/portada.png" alt="Banner MatiaLR Hardware" />
+      </div>
+    </header>
+
+    <div class="container">
+      <!-- INICIO -->
+      <section id="inicio" class="section active">
+        <div class="video-trio">
+          <iframe src="https://www.youtube.com/embed/dpE87nUVesA?start=141&end=151&autoplay=1&mute=1&controls=0&rel=0&loop=1&playlist=dpE87nUVesA" allow="autoplay" frameborder="0"></iframe>
+          <iframe src="https://www.youtube.com/embed/ykYyQ7ruyT0?start=215&end=225&autoplay=1&mute=1&controls=0&rel=0&loop=1&playlist=ykYyQ7ruyT0" allow="autoplay" frameborder="0"></iframe>
+          <iframe src="https://www.youtube.com/embed/FfLJNnBVufE?start=50&end=60&autoplay=1&mute=1&controls=0&rel=0&loop=1&playlist=FfLJNnBVufE" allow="autoplay" frameborder="0"></iframe>
+        </div>
+
+        <center>
+          <h2>Bienvenido</h2>
+          <p>Somos tu tienda de confianza en hardware, PC gamers y periféricos.</p>
+        </center>
+      </section>
+
+      <!-- PRODUCTOS -->
+      <section id="productos" class="section">
+        <h2>Productos</h2>
+
+        <div class="categorias-menu" id="menu-categorias"></div>
+
+        <select id="menu-subcategorias" onchange="filtrarSubgrupo(this.value)" class="subcategorias-select">
+          <option value="todos">Mostrar todos</option>
+        </select>
+
+        <div class="productos-grid" id="contenedor-productos"></div>
+
+        <p id="ultima-actualizacion" class="ultima-actualizacion" style="font-size: 0.9em; color: #666;"></p>
+      </section>
+
+      <!-- SERVICIOS -->
+      <section id="servicios" class="section">
+        <h2>Servicios</h2>
+        <ul>
+          <li>Armado de PC a medida</li>
+          <li>Venta de componentes</li>
+          <li>Asesoramiento técnico y upgrades</li>
+        </ul>
+      </section>
+
+      <!-- CONTACTO -->
+      <section id="contacto" class="section">
+        <h2>Contacto</h2>
+        <p>📧 Email: contacto@matialr.com</p>
+        <p>📱 WhatsApp: +54 9 11 1234 5678</p>
+        <p>📸 Instagram: @MatiaLR</p>
+        <p>🎥 YouTube: MatiaLR - Benchmark & Gaming</p>
+      </section>
     </div>
-  </header>
 
-
-  <div class="container">
-    <section id="inicio" class="section active">
-<h3 class="video-section-title">Últimos Benchmarks en YouTube 🎮🔥</h3>
-      <div class="video-trio">
-  <iframe src="https://www.youtube.com/embed/dpE87nUVesA?start=141&end=151&autoplay=1&mute=1&controls=0&showinfo=0&rel=0&loop=1&playlist=dpE87nUVesA" allow="autoplay" frameborder="0"></iframe>
-  
-  <iframe src="https://www.youtube.com/embed/ykYyQ7ruyT0?start=215&end=225&autoplay=1&mute=1&controls=0&showinfo=0&rel=0&loop=1&playlist=ykYyQ7ruyT0" allow="autoplay" frameborder="0"></iframe>
-  
-  <iframe src="https://www.youtube.com/embed/FfLJNnBVufE?start=50&end=60&autoplay=1&mute=1&controls=0&showinfo=0&rel=0&loop=1&playlist=FfLJNnBVufE" allow="autoplay" frameborder="0"></iframe>
-</div>
-      <center>
-        <h2>Bienvenido</h2>
-        <p>Somos tu tienda de confianza en hardware, PC gamers y periféricos.</p>
-      </center>
-    </section>
-
-    <section id="productos" class="section">
-      <h2>Productos</h2>
-      <div class="categorias-menu" id="menu-categorias"></div>
-    <select id="menu-subcategorias" onchange="filtrarSubgrupo(this.value)" class="subcategorias-select">
-  <option value="todos">Mostrar todos</option>
-</select>
-
-<p id="ultima-actualizacion" style="font-size: 0.9em; color: #666;">
-
-      <div class="productos-grid" id="contenedor-productos"></div>
-    </section>
-
-    <section id="servicios" class="section">
-      <h2>Servicios</h2>
-      <ul>
-        <li>Armado de PC a medida</li>
-        <li>Venta de componentes</li>
-        <li>Asesoramiento técnico y upgrades</li>
-      </ul>
-    </section>
-
-    <section id="contacto" class="section">
-      <h2>Contacto</h2>
-      <p>📧 Email: contacto@matialr.com</p>
-      <p>📱 WhatsApp: +54 9 11 1234 5678</p>
-      <p>📸 Instagram: @MatiaLR</p>
-      <p>🎥 YouTube: MatiaLR - Benchmark & Gaming</p>
-    </section>
+    <footer>
+      &copy; 2025 MatiaLR Hardware - Todos los derechos reservados
+    </footer>
   </div>
-
-  <footer>
-    &copy; 2025 MatiaLR Hardware - Todos los derechos reservados
-  </footer>
 
   <script src="scripts.js"></script>
 </body>
