--- a/index.html
+++ b/index.html
@@ -38,6 +38,17 @@
     <!-- PRODUCTOS -->
     <section id="productos" class="section">
       <h2>Productos</h2>
+<div class="cuenta-bancaria">
+  <h3>🧾 Datos para Transferencia Bancaria</h3>
+  <p><strong>Alias:</strong> mlr.hardware</p>
+  <p><strong>CBU:</strong> 0000000000000000000000</p>
+  <p><strong>Banco:</strong> Banco Nación</p>
+  <p><strong>Titular:</strong> Elias MatiaLR</p>
+
+  <a href="https://wa.me/549XXXXXXXXXX?text=Hola%2C%20ya%20realicé%20la%20transferencia%20y%20adjunto%20el%20comprobante%20de%20compra.%20Producto%3A%20_________" target="_blank">
+    <button class="boton-transferencia">Enviar comprobante por WhatsApp</button>
+  </a>
+</div>
       <div class="categorias-menu" id="menu-categorias"></div>
       <select id="menu-subcategorias" onchange="filtrarSubgrupo(this.value)" class="subcategorias-select">
         <option value="todos">Mostrar todos</option>
