--- a/index.html
+++ b/index.html
@@ -2,62 +2,48 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>MLR Hardware</title>
   <link rel="icon" href="img/LOGO/logo.png" type="image/png" />
   <link rel="stylesheet" href="estilos.css" />
 </head>
 <body>
   <header>
-  
-    <div class="portada">
-      <img src="img/LOGO/portada.png" alt="Banner MatiaLR Hardware">
-    </div>
-  </header>
- <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+    <div class="menu-toggle" onclick="toggleMenu()">☰</div>
     <nav id="main-menu">
       <button onclick="showSection('inicio')">Inicio</button>
       <button onclick="showSection('productos')">Productos</button>
       <button onclick="showSection('servicios')">Servicios</button>
       <button onclick="showSection('contacto')">Contacto</button>
     </nav>
-  <div class="container">
-    <!-- INICIO -->
-    <section id="inicio" class="section active">
-<center>      
-<div class="video-trio">
-         <iframe src="https://www.youtube.com/embed/FfLJNnBVufE?start=50&end=60&autoplay=1&mute=1&controls=0&rel=0&loop=1&playlist=FfLJNnBVufE" allow="autoplay" frameborder="0"></iframe>
-      </div>
+    <div class="portada">
+      <img src="img/LOGO/portada.png" alt="Banner MatiaLR Hardware">
+    </div>
+  </header>
 
-      
+  <div class="container">
+    <section id="inicio" class="section active">
+      <div class="video-trio">
+        <iframe src="https://www.youtube.com/embed/dpE87nUVesA?start=141&end=151&autoplay=1&mute=1&controls=0&rel=0&loop=1&playlist=dpE87nUVesA" allow="autoplay" frameborder="0"></iframe>
+        <iframe src="https://www.youtube.com/embed/ykYyQ7ruyT0?start=215&end=225&autoplay=1&mute=1&controls=0&rel=0&loop=1&playlist=ykYyQ7ruyT0" allow="autoplay" frameborder="0"></iframe>
+        <iframe src="https://www.youtube.com/embed/FfLJNnBVufE?start=50&end=60&autoplay=1&mute=1&controls=0&rel=0&loop=1&playlist=FfLJNnBVufE" allow="autoplay" frameborder="0"></iframe>
+      </div>
+      <center>
         <h2>Bienvenido</h2>
         <p>Somos tu tienda de confianza en hardware, PC gamers y periféricos.</p>
       </center>
     </section>
 
-    <!-- PRODUCTOS -->
     <section id="productos" class="section">
       <h2>Productos</h2>
-<div class="cuenta-bancaria">
-  <h3>🧾 Datos para Transferencia Bancaria</h3>
-  <p><strong>Alias:</strong> mlr.hardware</p>
-  <p><strong>CBU:</strong> 0000000000000000000000</p>
-  <p><strong>Banco:</strong> Banco Nación</p>
-  <p><strong>Titular:</strong> Elias MatiaLR</p>
-
-  <a href="https://wa.me/549XXXXXXXXXX?text=Hola%2C%20ya%20realicé%20la%20transferencia%20y%20adjunto%20el%20comprobante%20de%20compra.%20Producto%3A%20_________" target="_blank">
-    <button class="boton-transferencia">Enviar comprobante por WhatsApp</button>
-  </a>
-</div>
       <div class="categorias-menu" id="menu-categorias"></div>
       <select id="menu-subcategorias" onchange="filtrarSubgrupo(this.value)" class="subcategorias-select">
         <option value="todos">Mostrar todos</option>
       </select>
       <div class="productos-grid" id="contenedor-productos"></div>
-      <p id="ultima-actualizacion" class="ultima-actualizacion" style="font-size: 0.9em; color: #666;"></p>
+      <p id="ultima-actualizacion" class="ultima-actualizacion"></p>
     </section>
 
-    <!-- SERVICIOS -->
     <section id="servicios" class="section">
       <h2>Servicios</h2>
       <ul>
@@ -67,7 +53,6 @@
       </ul>
     </section>
 
-    <!-- CONTACTO -->
     <section id="contacto" class="section">
       <h2>Contacto</h2>
       <p>📧 Email: contacto@matialr.com</p>
