--- a/index.html
+++ b/index.html
@@ -24,21 +24,18 @@
   <div class="container">
     <section id="inicio" class="section active">
       <div class="video-trio">
+        <!-- Tus iframes de bienvenida -->
       </div>
       <center>
         <h2>Bienvenido</h2>
         <p>Somos tu tienda de confianza en hardware, PC gamers y periféricos.</p>
-        <iframe src="https://www.youtube.com/embed/FfLJNnBVufE?start=50&end=60&autoplay=1&mute=1&controls=0&rel=0&loop=1&playlist=FfLJNnBVufE" allow="autoplay" frameborder="0"></iframe>
-
       </center>
     </section>
 
     <section id="productos" class="section">
       <h2>Productos</h2>
       <div class="categorias-menu" id="menu-categorias"></div>
-      <select id="menu-subcategorias" onchange="filtrarSubgrupo(this.value)" class="subcategorias-select">
-        <option value="todos">Mostrar todos</option>
-      </select>
+      <div class="subcategorias-menu" id="menu-subcategorias"></div>
       <div class="productos-grid" id="contenedor-productos"></div>
       <p id="ultima-actualizacion" class="ultima-actualizacion"></p>
     </section>
