--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
-<!-- Desarrollado por Elias + Copilot ✨ | Proyecto MLR Hardware - 2025 -->
-<!-- Desarrollado por Elias + Copilot ✨ | Proyecto MLR Hardware - 2025 -->
-<!-- Desarrollado por Elias + Copilot ✨ | Proyecto MLR Hardware - 2025 -->
-<!-- Desarrollado por Elias + Copilot ✨ | Proyecto MLR Hardware - 2025 -->
-<!-- Desarrollado por Elias + Copilot ✨ | Proyecto MLR Hardware - 2025 -->
-<!-- Desarrollado por Elias + Copilot ✨ | Proyecto MLR Hardware - 2025 -->
-<!-- Desarrollado por Elias + Copilot ✨ | Proyecto MLR Hardware - 2025 -->
-<!-- Desarrollado por Elias + Copilot ✨ | Proyecto MLR Hardware - 2025 -->
+<!-- Desarrollado por Elias Vanzetti + Copilot ✨ | Proyecto MLR Hardware - 2025 -->
+<!-- Desarrollado por Elias Vanzetti + Copilot ✨ | Proyecto MLR Hardware - 2025 -->
+<!-- Desarrollado por Elias Vanzetti + Copilot ✨ | Proyecto MLR Hardware - 2025 -->
+
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
