--- a/index.html
+++ b/index.html
@@ -68,5 +68,7 @@
   </footer>
 
   <script src="scripts.js"></script>
+<button onclick="enviarCarritoPorWhatsApp()" id="boton-finalizar">🛒 Finalizar compra</button>
+
 </body>
 </html>
