--- a/index.html
+++ b/index.html
@@ -17,11 +17,8 @@
       <button onclick="showSection('productos')">Productos</button>
       <button onclick="showSection('servicios')">Servicios</button>
       <button onclick="showSection('contacto')">Contacto</button>
-
       <div id="carrito-wrapper">
-        <button onclick="toggleCarritoBarra()" id="carrito-toggle">
-          🛒 (<span id="carrito-cantidad">0</span>)
-        </button>
+        <button onclick="toggleCarritoBarra()" id="carrito-toggle">🛒 (<span id="carrito-cantidad">0</span>)</button>
         <div id="carrito-contenido">
           <div id="carrito-lista"></div>
           <div class="carrito-totales">
@@ -33,7 +30,6 @@
         </div>
       </div>
     </nav>
-
     <div class="portada">
       <img src="img/LOGO/portada.png" alt="Banner MLR Hardware" />
     </div>
