--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
   <div id="toggle-theme" title="Modo claro/oscuro">🌓</div>
 
   <script src="scripts.js"></script>
+  <script src="tema.js" defer></script>
 
 </body>
 </html>
