--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   
   <link rel="stylesheet" href="estilos.css" />
   <link rel="stylesheet" href="tarjetas.css" />
+  <link rel="stylesheet" href="car1.css" />
 
 </head>
 <body>
