--- a/index.html
+++ b/index.html
@@ -82,5 +82,6 @@
   <script src="scripts.js"></script>
   <script src="tema.js" defer></script>
   <script src="car1.js" defer></script>
+ <script src="licencia.js" defer></script>
 </body>
 </html>
